; ModuleID = '/home/carl/AnghaBench/redis/src/extr_intset.c_intsetRemove.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_intset.c_intsetRemove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @intsetRemove(%struct.TYPE_8__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @_intsetValueEncoding(i32 %10)
  store i64 %11, i64* %7, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32*, i32** %6, align 8
  store i32 0, i32* %15, align 4
  br label %16

16:                                               ; preds = %14, %3
  %17 = load i64, i64* %7, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @intrev32ifbe(i32 %20)
  %22 = icmp sle i64 %17, %21
  br i1 %22, label %23, label %60

23:                                               ; preds = %16
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i64 @intsetSearch(%struct.TYPE_8__* %24, i32 %25, i32* %8)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %60

28:                                               ; preds = %23
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @intrev32ifbe(i32 %31)
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %9, align 4
  %34 = load i32*, i32** %6, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %36, label %38

36:                                               ; preds = %28
  %37 = load i32*, i32** %6, align 8
  store i32 1, i32* %37, align 4
  br label %38

38:                                               ; preds = %36, %28
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* %9, align 4
  %41 = sub nsw i32 %40, 1
  %42 = icmp slt i32 %39, %41
  br i1 %42, label %43, label %49

43:                                               ; preds = %38
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %45 = load i32, i32* %8, align 4
  %46 = add nsw i32 %45, 1
  %47 = load i32, i32* %8, align 4
  %48 = call i32 @intsetMoveTail(%struct.TYPE_8__* %44, i32 %46, i32 %47)
  br label %49

49:                                               ; preds = %43, %38
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %51 = load i32, i32* %9, align 4
  %52 = sub nsw i32 %51, 1
  %53 = call %struct.TYPE_8__* @intsetResize(%struct.TYPE_8__* %50, i32 %52)
  store %struct.TYPE_8__* %53, %struct.TYPE_8__** %4, align 8
  %54 = load i32, i32* %9, align 4
  %55 = sub nsw i32 %54, 1
  %56 = call i64 @intrev32ifbe(i32 %55)
  %57 = trunc i64 %56 to i32
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %58, i32 0, i32 1
  store i32 %57, i32* %59, align 4
  br label %60

60:                                               ; preds = %49, %23, %16
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  ret %struct.TYPE_8__* %61
}

declare dso_local i64 @_intsetValueEncoding(i32) #1

declare dso_local i64 @intrev32ifbe(i32) #1

declare dso_local i64 @intsetSearch(%struct.TYPE_8__*, i32, i32*) #1

declare dso_local i32 @intsetMoveTail(%struct.TYPE_8__*, i32, i32) #1

declare dso_local %struct.TYPE_8__* @intsetResize(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
